# gitsum

./: Cargo.toml  README.md
src/: cli.rs  git.rs  gpt.rs  main.rs  prompts.rs
sumup/: install  sumup
