[package]
name = "gitsum"
version = "0.1.0"
edition = "2021"
authors = ["boskeyacht"]
description = "A tool to summarize GitHub repositories"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version="1.0.155", features=["derive"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
eyre = "0.6"
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive"] }
spinners = "4.1.0"
